# leistungsdiagnostik

./: .env.example  .gitignore  AGENTS.md  BRIEF.md  FEATURE_PLAN.md  Leistungsdiagnostik.command  README.md  USAGE_GUIDE.md  build_report_template.py  build_template.py  main.py  pyproject.toml
.codex/prompts/: ld-report.md
feedback/round1/: 26_05_LD_Dateneingabe_Korrektur.docx  PRODUCT_FEEDBACK_HANDOFF.md
feedback/round2/: ANNA_DECISIONS.md  ANNA_TEST_ANLEITUNG.md  IMPLEMENTATION_PLAN.md  PRODUCT_REFINEMENT_ROUND2.md
feedback/round3/: 26_05_LD_Dateneingabe_Korrektur_3.docx  PRODUCT_REFINEMENT_ROUND3.md
feedback/round4/: 26_05_LD_Dateneingabe_Korrektur_4.docx  PRODUCT_REFINEMENT_ROUND4.md
samples/: 26_05_LD_Dateneingabe.docx  RM_LD_LAUF_24_05.xlsx
scripts/: pytest_baseline.sh
src/ld/: errors.py  interpret.py  io_input.py  patch_interpretation.py  pflichtpruefungen.py  plots.py  redact.py  render_qa.py  report.py  run.py  types.py  versioning.py  zone_tool.py  zones.py  zones_cli.py  zones_override.py
src/ld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: input_template.xlsx  report.docx
tests/e2e/: test_reference_5pages.py  test_smoke.py
tests/protocols/: test_lauf.py
tests/unit/: test_basename_norm.py  test_coaching_truncation.py  test_codex_prompt_schema.py  test_common.py  test_interpretation_fields.py  test_intersection_pivot.py  test_io_input.py  test_plot_no_extrapolation.py  test_plots.py  test_redact.py  test_round3_report_deltas.py  test_round4_report_deltas.py  test_rpe_validation.py  test_zone_tool.py  test_zones.py
(+9 files in other folders)
