[project]
name = "ld"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docxtpl>=0.20.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "docx2txt>=0.9",
    "pytest>=9.0.3",
    "pytest-snapshot>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
