[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ld"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docxtpl>=0.20.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
# Visual zone-editing tool (Anna 2026-05-13 Phase 8). Install with
# `uv pip install -e ".[visual]"` then run `uv run streamlit run src/ld/zone_tool.py`.
visual = [
    "streamlit>=1.40",
]

[dependency-groups]
dev = [
    "docx2txt>=0.9",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "pytest-snapshot>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
